# Syntax-Coach

./: .gitignore  README.md  TODO.md
.cursor/skills/syntaxcoach/: SKILL.md  reference.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  exceptions.py  main.py
backend/app/api/: chat.py  envelope_middleware.py  exception_handlers.py  grammar.py  mistakes.py  profile.py  review.py  scenes.py
backend/app/db/: database.py  models.py
backend/app/kb/: loader.py
backend/app/schemas/: errors.py  models.py
backend/app/services/: agent.py  chat.py  memory_store.py
backend/data/: scenes.json
backend/data/grammar_points/: articles_a_an_the.json  countable_uncountable.json  past_vs_present_perfect.json  prepositions_in_on_at.json  subject_verb_agreement.json
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: ChatPane.vue  GrammarCard.vue  ScenePicker.vue  TopBar.vue
frontend/src/pages/: ChatPage.vue  HistoryPage.vue  HomePage.vue  MistakesPage.vue  ReviewPage.vue  SettingsPage.vue
frontend/src/router/: index.ts
frontend/src/styles/: tokens.css
frontend/src/types/: index.ts
frontend/src/utils/: highlight.ts
