[project]
name = "syntaxcoach-backend"
version = "0.1.0"
description = "SyntaxCoach FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "sqlalchemy>=2.0,<3.0",
    "python-dotenv==1.0.1",
    "langchain>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langgraph>=0.2,<1.0",
]

[tool.uv]
package = false
